# openai-experiments

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  example_experiment.ipynb  main.py  pyproject.toml  reset_podman_vm.sh
.github/workflows/: docker-build.yml
app/: api.py
notebooks/: example_experiment.ipynb  openai_test.ipynb
scripts/: example_script.py
tests/: test_api.py
