[tool.poetry]
name = "openai_experiments"
version = "0.28.1"
description = "Reproducible experiments with OpenAI models"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "app" },
    { include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"